@@ -34,7 +34,7 @@
 #include <glade/glade.h>
 
 #include "filter-datespec.h"
-#include "e-util/e-sexp.h"
+#include "libedataserver/e-sexp.h"
 #include "widgets/misc/e-error.h"
 
 #define d(x)
