@@ -1,3 +1,9 @@
+2004-11-15  Not Zed  <NotZed@Ximian.com>
+
+	* *.c: Moved stuff from e-util to libedataserver.
+
+	* filter-system-flag.c: removed gal header.
+
 2004-07-29  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* filter-file.c: added the "use_filechooser" property to the 
